crates/site-gen/tests/snapshots/snapshots__product_page_formula_changed_branch_a.snap
---
source: crates/site-gen/tests/snapshots.rs
expression: "without_css(&common::page(&out,\n\"pr/example-naturals-magnesium-taurate-120-capsules/900006.html\"))"
---
<!doctype html>
<html lang="en" dir="ltr">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width,initial-scale=1">
<title>Example Naturals Magnesium Taurate, 120 Capsules · Vitrina</title>
<meta name="description" content="Example Naturals Magnesium Taurate, 120 Capsules: $0.327 per 100 mg of magnesium">

<link rel="canonical" href="https://vitrina.example/pr/example-naturals-magnesium-taurate-120-capsules/900006">
<link rel="icon" href="/static/icon.svg" type="image/svg+xml">
<style>…</style>
<script src="/static/app.js?v=8882536698" defer></script>
</head>
<body data-api="/api">
<a class="skip" href="#main">Skip to content</a>
<div class="wrap">
<header class="top">
<a class="brand" href="/">Vitrina</a>
<nav><a href="/c/magnesium">Magnesium</a><a href="/how">How we rank</a></nav>
</header>
<main id="main">

<p class="crumbs"><a href="/c/magnesium">Magnesium</a></p>
<h1>Magnesium Taurate, 120 Capsules</h1>
<p class="meta">Example Naturals</p>
<div class="panel">
<p class="price"><b>$0.327</b> per 100 mg of magnesium</p>
<p class="sub">$24.50 for 60 servings of 125 mg</p>
<div class="buy">
<a class="btn" href="https://tracking.example/c/000000/0000/0000?u=https%3A%2F%2Fwww.iherb.com%2Fpr%2Fexample-naturals-magnesium-taurate-120-capsules%2F900006" rel="sponsored nofollow" data-buy="900006">Buy on iHerb</a>
<p class="disc">Affiliate link: we may earn a commission. It never changes the ranking.</p>
</div>
</div>

<section class="panel">
<h2>Place in the rankings</h2>
<ul><li>Lowest price per 100 mg: 7 of 8</li><li>Best rated: 5 of 7</li><li>Balance: 5 of 7</li></ul>
</section>


<section class="panel">
<h2>Price per unit</h2>
<p class="mono">$24.50 ÷ (60 servings × 125 mg) × 100 mg = $0.327</p>
<p class="src">Price from the network feed of 2026-09-26 06:02 UTC.</p>
</section>


<section class="panel">
<h2>Label, line by line</h2>
<div class="scroll"><table>
<thead><tr><th>#</th><th>On the label</th><th>Counted as</th><th>Factor</th><th class="num">Magnesium</th></tr></thead>
<tbody>
<tr><td>1</td><td>125 mg Magnesium taurate (anhydrous)</td><td>magnesium</td><td>× 1</td><td class="num">125 mg</td></tr>
</tbody>
</table></div>
<p>Per serving: 125 mg of magnesium. Serving size 2, 60 servings per container.</p>
<p class="src">Label checked by fixture (synthetic) on 2026-09-20.</p>
<p class="src">The formula changed on 2026-02-01; figures use the current label.</p>
<p class="src">No third-party testing mark on the label.</p>

<p class="src">Sources of the factors: <a href="https://pubchem.ncbi.nlm.nih.gov/compound/Magnesium-taurate" rel="nofollow">Magnesium taurate (anhydrous)</a>.</p>

</section>


<section class="panel">
<h2>Nearby in “Balance”</h2>
<ol>
<li value="2"><a href="/pr/fixture-labs-magnesium-bisglycinate-200-mg-180-capsules/900001">Fixture Labs Magnesium Bisglycinate, 200 mg, 180 Capsules</a> <span class="mono">$0.106</span></li>
<li value="3"><a href="/pr/sample-works-magnesium-malate-120-capsules/900004">Sample Works Magnesium Malate, 120 Capsules</a> <span class="mono">$0.124</span></li>
<li value="4"><a href="/pr/sample-works-magnesium-carbonate-120-capsules/900012">Sample Works Magnesium Carbonate, 120 Capsules</a> <span class="mono">$0.050</span></li>
<li value="5"><b>Example Naturals Magnesium Taurate, 120 Capsules</b> <span class="mono">$0.327</span></li>
<li value="6"><a href="/pr/placeholder-nutrition-magnesium-oxide-400-mg-250-tablets/900003">Placeholder Nutrition Magnesium Oxide, 400 mg, 250 Tablets</a> <span class="mono">$0.010</span></li>
<li value="7"><a href="/pr/fixture-labs-magnesium-l-threonate-90-capsules/900005">Fixture Labs Magnesium L-Threonate, 90 Capsules</a> <span class="mono">$0.646</span></li>
</ol>
</section>

<section class="panel">
<h2>Something wrong in this data?</h2>
<p class="pnote">Tell us which number is wrong. Please do not include personal details.</p>
<form class="report" method="post" action="/api/report">
<input type="hidden" name="product" value="900006">
<input type="hidden" name="page_url" value="/pr/example-naturals-magnesium-taurate-120-capsules/900006">
<label for="rf">What is wrong</label>
<select id="rf" name="field">
<option value="price">Price</option>
<option value="label">Label or dose</option><option value="rating">Rating</option>
<option value="other">Something else</option>
</select>
<label for="rt">Details</label>
<textarea id="rt" name="text" maxlength="2000" required></textarea>
<button type="submit">Send</button>
<p class="thanks ok" hidden>Thank you. We check every report.</p>
<p class="thanks fail" hidden>Could not send the report. Please try again later.</p>
</form>
</section>

</main>
<footer>
<nav><a href="/disclosure">Affiliate disclosure</a><a href="/privacy">Privacy</a><a href="/how">Methodology</a></nav>
<p>We earn a commission when you buy through our links. Commission never changes the order.</p>
<p>Information, not medical advice. We show doses and prices; the dose you take is yours to choose with your clinician.</p>
<p>Prices from the network feed of 2026-09-26 06:02 UTC.</p>
</footer>
</div>
</body>
</html>
